# API-test

./: .gitignore  README.md  __main__.py  main.py
libraries/: pyproject.toml
libraries/src/src/src/: bqfinder.py  gcsfinder.py  logger.py
libraries/src/tests/: ComandiGcloud.txt  test_bqfinder.py  test_gcsfinder.py  test_main.py
