[tool.poetry]
name = "bqfinder"
version = "0.1.0"
description = ""
authors = ["skygambaroe <enrico.gambaro.nttdata@skytv.it>"]
readme = "README.md"
packages = [{include = "bqfinder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-bigquery = "^3.20.1"
google = "^3.0.0"
setuptools = "^69.5.1"
google-api-python-client = "^2.126.0"
google-cloud-storage = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
